--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/bkdev98/inspery-api#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "compression": "^1.6.2",
     "cross-env": "^5.0.1",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "helmet": "^3.6.1",
+    "mongoose": "^4.11.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -32,6 +36,7 @@
     "babel-preset-env": "^1.6.0",
     "eslint": "^4.2.0",
     "eslint-config-equimper": "^2.1.2",
+    "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "webpack": "^3.1.0",
     "webpack-node-externals": "^1.6.0"
