--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "compression": "^1.6.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
+    "express-validation": "^1.0.2",
     "helmet": "^3.6.1",
-    "mongoose": "^4.11.1"
+    "joi": "^10.6.0",
+    "mongoose": "^4.11.1",
+    "validator": "^8.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
