--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Inspery Restful API 💡",
   "main": "index.js",
   "scripts": {
-    "dev:build": "webpack -w",
+    "clean": "rimraf dist",
+    "dev:build": "yarn run clean && webpack -w",
     "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js"
   },
   "repository": {
@@ -41,6 +42,7 @@
     "eslint-config-equimper": "^2.1.2",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
+    "rimraf": "^2.6.1",
     "webpack": "^3.1.0",
     "webpack-node-externals": "^1.6.0"
   }
