--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "helmet": "^3.6.1",
     "joi": "^10.6.0",
     "mongoose": "^4.11.1",
+    "mongoose-unique-validator": "^1.0.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "slug": "^0.9.1",
     "validator": "^8.0.0"
   },
   "devDependencies": {
