--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "express-validation": "^1.0.2",
     "helmet": "^3.6.1",
     "joi": "^10.6.0",
+    "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.1",
     "mongoose-unique-validator": "^1.0.5",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "slug": "^0.9.1",
     "validator": "^8.0.0"
