--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.15.3",
     "express-validation": "^1.0.2",
     "helmet": "^3.6.1",
+    "http-status": "^1.0.1",
     "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.1",
