--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
+    "prettier": "prettier --single-quote --print-width 80 --trailing-comma all --write 'src/**/*.js'",
     "dev:build": "yarn run clean && webpack -w",
     "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js"
   },
@@ -48,8 +49,10 @@
     "babel-preset-env": "^1.6.0",
     "eslint": "^4.2.0",
     "eslint-config-equimper": "^2.1.2",
+    "eslint-config-prettier": "^2.3.0",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
+    "prettier": "^1.5.2",
     "rimraf": "^2.6.1",
     "webpack": "^3.1.0",
     "webpack-node-externals": "^1.6.0"
